# Peroot

./: .gitignore  README.md  README_LLM.md
.agent/rules/: themasterpromt.md
.cursor/: mcp.json
.github/workflows/: ci.yml  cron-content-factory.yml  deploy-cloudflare.yml
Prut/: 01_Executive_Summary.md  02_PRD.md  03_IA_Sitemap.md  04_UX_Microcopy.md  05_User_Stories.md  06_Engineering_Spec.md  07_Data_Model.md  08_API_Spec.md  09_LLM_Strategy.md  10_QA_Plan.md  11_Security_Legal.md  12_Analytics_Growth.md  13_Roadmap.md  AI_AGENT_PROMPT.md
Prut/web/: .ag_brain.md  .ag_registry.json  .claudeignore  .env.example  .gitignore  .lintstagedrc  .prettierignore  AGENT-KICKOFF.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  MIGRATION-STATUS.md  PEROOT-CLOUDFLARE-MIGRATION.md  PRODUCT.md  README.md  branding_prompts.md  create-newsletter-table.sql  create-prompt-folders.sql  create-referral-system.sql  eslint.config.mjs  fix-race-conditions.sql  hive.sh  knip.json  mcp-servers-config.json  models.txt  next.config.ts  package-lock.json  package.json  personal_library_prompt_style.sql  playwright.config.ts  prompt_favorites.sql  prompt_popularity.sql  prompts.he.json  prompts.sqlite  prompts_index.sql  (+13 more)
Prut/web/tools/crewai-ui-audit/: .gitignore  README.md  pyproject.toml
Prut/web/tools/crewai-ui-audit/src/ui_audit_crew/: crew.py  main.py
Prut/web/tools/crewai-ui-audit/src/ui_audit_crew/config/: agents.yaml  tasks.yaml
Prut/web/tools/crewai-ui-audit/src/ui_audit_crew/tools/: browser.py  sitemap.py
peroot-mcp-server/: README.md  package-lock.json  package.json
(+1014 files in other folders)
